# orictools

./: CMakeLists.txt  Makefile  README.md  run.sh
release/: bager.bas  bager.dsk  bager.tap  bager_mfm.dsk
src/: bas2txt.c  old2mfm.c  sedoric3.c  tap2dsk.c  txt2bas.c  txt2lvl.cpp
test/: AlbertoG1-1.txt  bager.bas  test.bas
